<resources>
    <string name="app_name">Cookulator</string>
    <string name="title_measures">Measures</string>
    <string name="title_baking">Pans</string>
    <string name="title_servings">Servings</string>
    <string name="ingredient_note">Only required for converting between weight and volume</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_ingredient_name">Ingredient Name</string>
    <string name="title_measurement_value">Measurement Value</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="title_convert_from">Convert From</string>
    <string name="title_convert_to">Convert To</string>
    <string name="heading_convert_from_this_pan">Convert from this pan...</string>
    <string name="heading_to_this_pan">...To this pan!</string>
    <string name="title_units">Units:</string>
    <string name="title_fragment_units">Units</string>
    <string name="title_pan_outer_diameter">Pan Outer Diameter</string>
    <string name="title_pan_inner_diameter">Pan Inner Diameter</string>
    <string name="title_pan_diameter">Pan Diameter</string>
    <string name="button_clear_list">Clear List</string>
    <string name="title_ingredient">Ingredient</string>
    <string name="title_pan_width">Pan Width</string>
    <string name="title_pan_length">Pan Length</string>
    <string name="title_input_serving">Input Serving</string>
    <string name="title_output_serving">Output Serving</string>
    <string name="title_input_pan">Input Pan</string>
    <string name="title_type">Type:</string>
    <string name="default_type">Rectangular</string>
    <string name="title_dimension_1">Dimension 1:</string>
    <string name="title_dimension_2">Dimension 2:</string>
    <string name="button_edit">EDIT</string>
    <string name="title_output_pan">Output Pan</string>
    <string name="title_input_pan_type">Input Pan Type</string>
    <string name="title_output_pan_type">Output Pan Type</string>
    <string name="title_unknown_pan_type">Unknown Pan Type</string>
    <string name="pan_type_rectangular">Rectangular</string>
    <string name="dimension_rectangular_1">Length:</string>
    <string name="dimensions_rectangular_2">Width:</string>
    <string name="pan_type_circular">Circular</string>
    <string name="dimensions_circular">Diameter:</string>
    <string name="pan_type_bundt">Bundt</string>
    <string name="dimensions_bundt_1">Outer Diameter:</string>
    <string name="dimensions_bundt_2">Inner Diameter:</string>
    <string name="pan_type_unknown">Unknown</string>
    <string name="dimensions_unknown">Unknown:</string>
    <string name="info_fragment_baking">Use this tab to scale ingredient amounts between different pan types. \n\nThis works such that the depth of the cake mix in the new pan will be same as the depth of the cake in the old pan, giving a similar baking time. \n\nUse \"Save\" to save to the ingredients list. \nUse \"Copy\" to copy the output value. \nUse \"Paste\" to paste the stored output value to the input field.</string>
    <string name="info_fragment_serving">Use this tab to scale ingredient amounts to a new number of servings. \n\nThe amount of ingredients is increased or decreased such that each serving size will be the same as the original recipe. \n\nUse \"Save\" to save to the ingredients list. \nUse \"Copy\" to copy the output value. \nUse \"Paste\" to paste the stored output value to the input field.</string>
    <string name="info_fragment_measures">Use this tab to scale ingredient amounts between different measurement units. \n\nThe amount of ingredients will be the same as the original recipe, but reported in your units of choice. \n\nFor converting between weight and volume, or between US-style \"cups\" and Metric \"kg\", you will need to select an ingredient type - if you don\'t see your ingredient, pick the most similar. \n\nUse \"Save\" to save to the ingredients list. \nUse \"Copy\" to copy the output value. \nUse \"Paste\" to paste the stored output value to the input field.</string>
    <string name="info_fragment_recipe">Your saved list of ingredients</string>
    <string name="info_fragment_ingredients">Use this tab to scale an ingredient amount by a different ingredient amount. \n\nThe amount of ingredients is increased or decreased such that the ratio between ingredients is the same as the original recipe. \n\nUse \"Save\" to save to the ingredients list. \nUse \"Copy\" to copy the output value. \nUse \"Paste\" to paste the stored output value to the input field.</string>
    <string name="button_paste">Paste</string>
    <string name="button_copy">Copy</string>
    <string name="error_ingredients">Ingredient selection required!</string>
    <string name="helper_ingredients_optional">Optional selection</string>
    <string name="helper_ingredients_required">Required selection</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_licences">Licences</string>
    <string name="menu_information">Information</string>
    <string name="context_description_pan_type_icon">Pan type icon</string>
    <string name="hint_units">Units</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_your_ingredient_amount">Your Ingredient Amount</string>
    <string name="title_recipe_ingredient_amount">Recipe Ingredient Amount</string>
    <string name="title_ingredient_scale_factor">Ingredient Scale Factor</string>
    <string name="title_scale_factor">Scale Factor</string>
    <string name="title_your_amount">Your Amount:</string>
    <string name="title_recipe_amount">Recipe Amount:</string>
</resources>
