<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/title_ingredient_scale_factor"
            android:gravity="center"
            android:id="@+id/tv_pansize_bottomsheet_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAppearance="?attr/textAppearanceHeadline6"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_bssc_recipe_amount"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextEnabled="true"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:hint="@string/title_recipe_ingredient_amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_bssc_recipe_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                tools:text="10"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            android:hint="@string/title_your_ingredient_amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_bssc_user_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                tools:text="10"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/title_scale_factor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_bssc_scale_factor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:focusable="false"
                tools:text="10"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_ingredientscalefactor_cancel"
                android:layout_marginRight="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:layout_weight="1"
                style="?attr/materialButtonOutlinedStyle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_ingredientscalefactor_save"
                android:layout_marginLeft="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_save"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>