<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.measures.FragmentMeasures">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:focusable="true"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    android:padding="16dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_ingredient"
        android:textSize="12sp"
        android:layout_marginLeft="4dp"/>

    <Spinner
        android:id="@+id/sp_measure_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_note"
        android:textSize="12sp"
        android:layout_marginLeft="4dp"
        android:textStyle="italic"/>



    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_measures_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_measures_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:text="10"
                android:hint="@string/title_convert_from"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/sp_measure_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_measures_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_measures_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                tools:text="20"
                android:hint="@string/title_convert_to"
                android:editable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/sp_measure_output"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_save_measures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_save"/>

</LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>